# intellibooksStudio

./: .env.example  .gitignore  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml  readme.md  turbo.json
.claude/: settings.local.json
apps/ui/: .gitignore  Dockerfile  next.config.js  next.config.ts  package.json  proxy.ts
apps/ui/app/: globals.css  layout.tsx  page.tsx
contracts/openapi/: agents-service.yaml
docs/architecture/: README.md  SYSTEM_ARCHITECTURE.md
infrastructure/docker/: .env.example  docker-compose.yml
mcp-servers/azure-devops-mcp/: Dockerfile  package.json
mcp-servers/azure-devops-mcp/src/: index.ts
mcp-servers/chromadb-mcp/: Dockerfile  package.json
mcp-servers/chromadb-mcp/src/: index.ts
mcp-servers/clickup-mcp/: Dockerfile  package.json
mcp-servers/clickup-mcp/src/: index.ts
mcp-servers/database-mcp/: Dockerfile  package.json
mcp-servers/database-mcp/src/: index.ts
mcp-servers/drive-mcp/: Dockerfile  package.json
mcp-servers/drive-mcp/src/: index.ts
mcp-servers/github-mcp/: package.json
mcp-servers/github-mcp/src/: index.ts
mcp-servers/gmail-mcp/: Dockerfile  package.json
mcp-servers/gmail-mcp/src/: index.ts
mcp-servers/mcp-registry/: package.json
mcp-servers/mcp-registry/src/: index.ts
mcp-servers/neo4j-mcp/: Dockerfile  package.json
mcp-servers/neo4j-mcp/src/: index.ts
mcp-servers/slack-mcp/: package.json
mcp-servers/slack-mcp/src/: index.ts
mcp-servers/teams-mcp/: .gitignore  package.json
mcp-servers/teams-mcp/src/: index.ts
mcp-servers/zoho-cliq-mcp/: Dockerfile  package.json
mcp-servers/zoho-cliq-mcp/src/: index.ts
mcp-servers/zoho-mail-mcp/: Dockerfile  package.json
mcp-servers/zoho-mail-mcp/src/: index.ts
mcp-servers/zoom-mcp/: Dockerfile  package.json
mcp-servers/zoom-mcp/src/: index.ts
scripts/: deploy-gcp.sh  fix-inotify-limit.sh  run-python-service.js  start-all-docker.bat  start-local.bat  start-with-ray.bat  stop-all.bat
services/agent-factory/: Dockerfile  requirements.txt
services/agent-factory/src/: __init__.py  main.py
services/agents/: README.md  pyproject.toml
services/agents/src/: __init__.py  config.py
services/context-aggregator/: Dockerfile
services/context-aggregator/src/: __init__.py  main.py
services/mcp-gateway/: Dockerfile  requirements.txt
services/mcp-gateway/src/: __init__.py  main.py  registry.py  router.py
services/oauth/: Dockerfile  requirements.txt
services/oauth/src/: __init__.py  config.py  database.py  encryption.py  main.py  models.py
services/rag/: Dockerfile  README.md  pyproject.toml  requirements.txt
services/rag/src/: __init__.py  config.py  document_processor.py  rag_pipeline.py
services/rag/src/api/: main.py
services/rag/src/embeddings/: __init__.py
services/rag/src/graph_store/: __init__.py  entity_extractor.py  neo4j_store.py
services/rag/src/indexer/: __init__.py  document_indexer.py
services/rag/src/media_generation/: __init__.py  audio_generator.py  video_generator.py
services/rag/src/query_engine/: __init__.py  rag_engine.py
services/rag/src/retriever/: __init__.py  semantic_retriever.py
services/rag/src/vector_store/: __init__.py  chroma_store.py  simple_store.py
services/rbac/: Dockerfile  package.json
services/rbac/src/: config.ts  (+1 more)
services/websocket/: Dockerfile  README.md  pyproject.toml
services/websocket/src/: __init__.py  config.py  connection_manager.py  main.py
services/websocket/src/handlers/: __init__.py  chat_handler.py  research_handler.py  simple_chat_agent.py  smart_handler.py
services/websocket/src/models/: __init__.py  messages.py
(+67 files in other folders)
