[project]
name = "intellibooks-rag-service"
version = "1.0.0"
description = "RAG Pipeline Service for Intellibooks Studio with Ray, RabbitMQ, and ChromaDB"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "Intellibooks Team" }
]
keywords = ["rag", "vector-database", "chromadb", "ray", "rabbitmq", "embeddings"]

dependencies = [
    # Web framework
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",

    # Vector database
    "chromadb>=0.4.0",

    # Embeddings
    "sentence-transformers>=2.2.0",
    "numpy>=1.24.0",

    # LangChain for LLM integration
    "langchain>=0.3.0",
    "langchain-openai>=0.2.0",
    "langchain-anthropic>=0.2.0",
    "langchain-community>=0.3.0",

    # Document processing
    "pypdf>=4.0.0",
    "python-docx>=1.0.0",
    "beautifulsoup4>=4.12.0",

    # OCR for scanned PDFs (requires Tesseract and Poppler system dependencies)
    "pytesseract>=0.3.10",
    "pdf2image>=1.16.0",
    "Pillow>=10.0.0",

    # Message queue
    "pika>=1.3.0",

    # Database
    "sqlalchemy>=2.0.0",
    "asyncpg>=0.29.0",
    "redis>=5.0.0",

    # Utilities
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "python-dotenv>=1.0.0",
    "httpx>=0.27.0",
    "aiofiles>=23.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.0.0",
    "black>=24.0.0",
    "ruff>=0.3.0",
]

ray = [
    # Ray for distributed processing (Linux/Mac only, use Docker on Windows)
    "ray[default]>=2.9.0",
]

[project.urls]
Homepage = "https://github.com/intellibooks/intellibooks-studio"
Repository = "https://github.com/intellibooks/intellibooks-studio/tree/main/services/rag"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
